2017-11-05  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode): Make sentence-end-double-space local
	in this buffer.

2017-10-29  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (glep-mode): Document that glep-mode does not
	work with XEmacs.

2017-10-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.40 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* glep-mode.el (font-lock-beg, font-lock-end): Define to suppress
	byte-compiler warnings.

	* glep-mode.el (glep-mode-update-last-modified): New function,
	updates the Last-Modified header when saving the file.
	(glep): New customisation group.
	(glep-mode-update-last-modified): New custom variable.
	(glep-mode-last-modified-re): New variable.
	(glep-mode-before-save): New function.
	(glep-mode): Add glep-mode-before-save to write-contents-hook.

2017-10-27  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild): Rename customisation group.
	(ebuild-mode-portdir, ebuild-mode-eapi-list)
	(ebuild-mode-fix-whitespace, ebuild-mode-update-copyright)
	(ebuild-mode-delete-cvs-line): Update accordingly.
	(ebuild-mode-update-copyright): Update lwarn type.

	* glep-mode.el (glep-mode-insert-skeleton): Update from GLEP 2.
	Inclusion of that modification under GPL-2+ acked by mgorny.

2017-10-15  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el: The template text in glep-mode-insert-skeleton has
	not much changed from the last CVS version of GLEP 2, which is in
	the public domain. We can therefore base it on that version and
	avoid the complications of including CC-BY-SA licensed material.
	Relicense glep-mode to GPL version 2, or any later version.

	* ebuild-mode.el (ebuild-run-echangelog): Drop echangelog support,
	gentoolkit-dev is deprecated and gentoolkit does not provide the
	command any more.
	(ebuild-mode-map, ebuild-mode-menu): Drop keybinding and menu
	entry for ebuild-run-echangelog.
	* ebuild-mode.texi (ebuild-mode): Update documentation.
